--- a/sass/Composants/_loader.scss
+++ b/sass/Composants/_loader.scss
@@ -5,8 +5,8 @@
     justify-content: center;
     align-items: center;
     background-color: $light-grey;
-    width: 99vw;
-    height: 99vh;
+    width: 100%;
+    height: 100%;
     animation: visible 3s ease-in-out forwards;
 }
 
