--- a/sass/Pages/_restaurants.scss
+++ b/sass/Pages/_restaurants.scss
@@ -82,8 +82,8 @@
         position: relative;
         right: 0px;
         top: 0px;
-        width: 25px;
-        height: 25px;
+        width: 28px;
+        height: 28px;
         font-weight: 200;
         cursor: pointer;
 
@@ -91,8 +91,9 @@
             position: absolute;
             top: -150px;
             right: 49%;
-            width: 50px;
-            height: 50px;
+            width: 53px;
+            height: 53px;
+            text-align: center;
         }
 
         &__empty {
@@ -111,20 +112,21 @@
         &__full {
             transform: scale(0,0);
             z-index: 2;
-            font-size: 25px;
+            font-size: 28px;
+            color: transparent;
             background: linear-gradient(to bottom left, $color-primary, $color-secondary);
             background-clip: text;
             -webkit-background-clip: text;
-            color: transparent;
 
             @include desktop {
-                font-size: 50px;
+                font-size: 53px;
             }
             
         }
 
         &:hover &__full {
-            transform: scale(1.5,1.5);
+            transform: scale(1,1);
+            color: $color-secondary;
             transition: all 2s ease-in;
             animation: animcoeur2 0.5s ease-in-out forwards;
             cursor: pointer;
