--- a/sass/Utils/_keyframes.scss
+++ b/sass/Utils/_keyframes.scss
@@ -12,7 +12,7 @@
         opacity: 15%;
     }
     100% {
-        transform: translateY(-26.5px);
+        transform: translateY(-27px);
         opacity: 100%;
     }
 }
@@ -31,7 +31,7 @@
         opacity: 15%;
     }
     100% {
-        transform: translateY(-27px);
+        transform: translateY(-28px);
         opacity: 100%;
     }
 }
@@ -43,14 +43,14 @@
         opacity: 0;
     }
     30% {
-        transform: translateY(-13px);
+        transform: translateY(-15px);
         opacity: 0;
     }
     75% {
         opacity: 15%;
     }
     100% {
-        transform: translateY(-50px);
+        transform: translateY(-51px);
         opacity: 100%;
     }
 }
